--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+/*{
+    outline: 2px solid red;
+}*/
 
 body{
     display: flex;
     margin: 0;
     flex-direction: column;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     min-height: 100vh;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -20,7 +23,8 @@ body{
 }
 
 .first-section{
-    padding-top: 200px;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .header{
@@ -35,6 +39,79 @@ body{
     gap: 20px;
     padding-top: 20px;
     font-size: 18px;
+}
+
+.image{
+    background-color: gray;
+    color: #e5e7eb;
+    min-width: fit-content;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    width: 500px;
+}
+
+.left{
+    width: 500px;
+}
+
+.subtext{
+    margin-bottom: 10px;
+    color: #e5e7eb;
+}
+
+.second-section{
+    background-color: white;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.sub-title{
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+    text-align: center;
+    margin: 50px;
+}
+
+.square-list{
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-bottom: 50px;
+    flex-wrap: wrap;
+}
+
+.square{
+    outline: 5px solid #3882f6;
+    width: 200px;
+    height: 200px;
+    border-radius: 20px;
+    margin-bottom: 10px;
+}
+
+.square-subtext{
+    font-size: 18px;
+    color: #768dbb;
+    text-align: center;
+    width: 200px;
+}
+
+button{
+    background-color: #3882f6;
+    color: #f9faf8;
+    padding: 5px 20px 5px 20px;
+    border-radius: 10px;
+    border: 2px;
+}
+
+h1{
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: 900;
+    margin: 0 0 10px;
 }
 
 ul{
