--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body{
 .first-section{
     padding-top: 100px;
     padding-bottom: 100px;
+    gap: 10px;
 }
 
 .header{
@@ -147,7 +148,15 @@ body{
 
 .second-button{
     outline: 2px solid white;
+}
 
+.footer{
+    background-color: #1f2937;
+    color: #e5e7eb;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding: 30px;
+    text-align: center;
 }
 
 button{
